--- a/index.html
+++ b/index.html
@@ -5,15 +5,72 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet"
         type="text/css">
     <title>Omnifoods</title>
 </head>
 
 <body>
-    <div class="row">
-        <h1>Omnifood</h1>
-    </div>
+    <header>
+        <nav>
+            <div class="row">
+                <img src="resources/css/images/logo-white.png" alt="Omnifood logo" class="logo">
+                <ul class="main-nav">
+                    <li><a href="#">Food Delivery</a></li>
+                    <li><a href="#">How It Works</a></li>
+                    <li><a href="#">Our Cities</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="hero-text-box">
+            <h1> Goodbye junk food.<br>Hello super healthy meals.</h1>
+            <a class="btn btn-full" href="#">I'm hungry</a>
+            <a class="btn btn-ghost" href="#">Show me more</a>
+        </div>
+
+    </header>
+
+    <section class="section-features">
+        <div class="row">
+            <h2>Get food fast &mdash; not fast food</h2>
+            <p class="long-copy">
+                Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for
+                cooking. So let us take care of that, we're really good at it, we promise!
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="col span-1-of-4">
+                <ion-icon name="calendar"></ion-icon>
+                <h3>Up to 365 days a year</h3>
+                <p>Never cook again! We really mean that. Our subscription plans include up to 365 days a year coverage.
+                    You can also choose to order more flexability if that's your style.</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="watch"></ion-icon>
+                <h3>Ready in 20 minutes</h3>
+                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your
+                    home. We work with the best chefs in each town to ensure that you're 100% happy, or your money back
+                    gareenteed!</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="nutrition"></ion-icon>
+                <h3>100% Organic</h3>
+                <p>All of our vegetables are fresh, orgranic, and local. Our animals are raised without added hormones
+                    nor antibiotics. Good for your health, the environment, and it also tastes better!</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="cart"></ion-icon>
+                <h3>Order Anything</h3>
+                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose
+                    from our menu containing over 100 delicious meals. It's up to you!</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
