--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
         </div>
 
         <div class="row">
-            <div class="col span-1-of-4">
-                <ion-icon name="calendar"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon name="calendar" class="icon-big"></ion-icon>
                 <h3>Up to 365 days a year</h3>
                 <p>Never cook again! We really mean that. Our subscription plans include up to 365 days a year coverage.
                     You can also choose to order more flexability if that's your style.</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="watch"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon name="watch" class="icon-big"></ion-icon>
                 <h3>Ready in 20 minutes</h3>
                 <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your
                     home. We work with the best chefs in each town to ensure that you're 100% happy, or your money back
                     gareenteed!</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="nutrition"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon name="nutrition" class="icon-big"></ion-icon>
                 <h3>100% Organic</h3>
                 <p>All of our vegetables are fresh, orgranic, and local. Our animals are raised without added hormones
                     nor antibiotics. Good for your health, the environment, and it also tastes better!</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="cart"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon name="cart" class="icon-big"></ion-icon>
                 <h3>Order Anything</h3>
                 <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose
                     from our menu containing over 100 delicious meals. It's up to you!</p>
