--- a/index.html
+++ b/index.html
@@ -71,6 +71,154 @@
 
     </section>
 
+    <section class="section-meals">
+        <ul class="meals-showcase clearfix">
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/1.jpg" alt="Korean bibimbap with egg and vegitables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/3.jpg" alt="Chicken breast steak with vegitables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/4.jpg" alt="Autumn pumpkin soup">
+                </figure>
+            </li>
+        </ul>
+        <ul class="meals-showcase clearfix">
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/5.jpg" alt="Paleo beef steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/6.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/7.jpg" alt="Burger with cheddar cheese and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="resources/css/images/8.jpg" alt="Granola with cherries and strawberries">
+                </figure>
+            </li>
+        </ul>
+    </section>
+
+    <section class="hiw-section">
+        <div class="row">
+            <h2>How it works : Simple as 1 &mdash; 2 &mdash; 3</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2 steps-box">
+                <img src="resources/css/images/app-iPhone.png" alt="Omni on iOs" class="app-screen">
+            </div>
+            <div class="col span-1-of-2 steps-box">
+                <div class="works-step">
+                    <div>1</div>
+                    <p>Chose the subscription pla that best fits your need and sign up today.</p>
+                </div>
+                <div class="works-step">
+                    <div>2</div>
+                    <p>Order your delicious meal using our mobile app or website. Or you can even class us!</p>
+                </div>
+                <div class="works-step">
+                    <div>3</div>
+                    <p>Enjoy your meal within the next 20 minutes. Then order again!</p>
+                </div>
+                <a href="#" class="btn-app"><img src="resources/css/images/download-app.svg"
+                        alt="app store button iOs"></a>
+                <a href="#" class="btn-app"><img src="resources/css/images/download-app-android.png"
+                        alt="app store button andriod"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="resources/css/images/lisbon-3.jpg" alt="Lisbon">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <ion-icon name="person"></ion-icon>
+                    16000+ Happy Eaters
+                </div>
+                <div class="city-future">
+                    <ion-icon name="star"></ion-icon>
+                    60+ top chefs
+                </div>
+                <div class="city-future">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                    @Omnifood_lx
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/css/images/san-francisco.jpg" alt="San Fransico">
+                <h3>San Fransico</h3>
+                <div class="city-feature">
+                    <ion-icon name="person"></ion-icon>
+                    3400+ Happy Eaters
+                </div>
+                <div class="city-future">
+                    <ion-icon name="star"></ion-icon>
+                    150+ top chefs
+                </div>
+                <div class="city-future">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                    @Omnifood_SF
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/css/images/berlin.jpg" alt="Berlin">
+                <h3>Berlinn</h3>
+                <div class="city-feature">
+                    <ion-icon name="person"></ion-icon>
+                    2300+ Happy Eaters
+                </div>
+                <div class="city-future">
+                    <ion-icon name="star"></ion-icon>
+                    110+ top chefs
+                </div>
+                <div class="city-future">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                    @Omnifood_berlin
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/css/images/london.jpg" alt="London">
+                <h3>London</h3>
+                <div class="city-feature">
+                    <ion-icon name="person"></ion-icon>
+                    12600+ Happy Eaters
+                </div>
+                <div class="city-future">
+                    <ion-icon name="star"></ion-icon>
+                    50+ top chefs
+                </div>
+                <div class="city-future">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                    @Omnifood_london
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
